# capi-rs

./: Cargo.toml
crates/capi_rs_platform_utils/: Cargo.toml
crates/capi_rs_platform_utils/examples/: screenshot.rs
crates/capi_rs_platform_utils/src/: lib.rs  monitor.rs
crates/capi_rs_platform_utils/src/platform/: macos.rs  mod.rs  windows.rs
crates/capi_rs_platform_utils/src/utils/: mod.rs
src/: main.rs
src/app/: mod.rs  wgpu_ctx.rs
src/platform_utils/: monitor.rs
