[package]
name = "capi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.0" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.1" }
objc2-foundation = { version = "0.2.0", features = ["NSThread"] }
objc2-app-kit = { version = "0.2.0" }
