[package]
name = "capi_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# 共享工作空间的依赖winit
winit.workspace = true
capi_rs_platform_utils = { path = "./crates/capi_rs_platform_utils" }
wgpu = { version = "0.20.0" }
pollster = { version = "0.3" }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
winit = { version = "0.30.0" }
