[package]
name = "capi_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1" }
capi_rs_platform_utils = { path = "./crates/capi_rs_platform_utils" }
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]